k8s/angular-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: angular-1
  name: angular-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-1
  strategy: {}
  template:
    metadata:
      labels:
        app: angular-1
    spec:
      containers:
      - image: zolidlime988/angular-v1
        name: angular-v1
        ports:
        - name: angular-port
          containerPort: 8080
        resources: {}
status: {}
