k8s/angular-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-1
  name: angular-1
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: angular-1
  type: ClusterIP
status:
  loadBalancer: {}
