k8s/angular-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-2
  name: angular-2
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: angular-2
  type: ClusterIP
status:
  loadBalancer: {}
