k8s/ingress-angular.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: angular-1
      port:
        number: 8000
  rules:
    - host: angular-multi-version.com
      http:
        paths:
        - path: /v1(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: angular-1
              port:
                number: 8000
        - path: /v2(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: angular-2
              port:
                number: 8000
